gccida/c1/apply_change_group
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_change_group/src/recog.c:804:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object), object->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_change_group/src/recog.c:804:42: error: expected expression
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object), object->fld[0].rtx) ) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_change_group/src/recog.c:809:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)object[2]; 
                         ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_change_group/src/recog.c:813:40: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v13 = *v5, v12.rtwint = ( __int64)v3->fld[0], asm_noperands( v3) < 0) ) 
                                       ^~~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_change_group/src/obj/recog.o] Error 1
